--- a/deployments/nfs_backup/roles/deploy_backup/tasks/main.yml
+++ b/deployments/nfs_backup/roles/deploy_backup/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-# This role is responsible for deploying the rClone service to the Docker Swarm cluster.
+# This role is responsible for deploying the restic service to the Docker Swarm cluster.
 # It ensures all prerequisites are installed, removes any existing service,
 # prepares the deployment configuration, and deploys the new stack.
 
@@ -23,21 +23,34 @@
   # This ensures that the Docker daemon is running and ready to accept commands
   # If Docker isn't running, subsequent tasks would fail
 
-# Task 3: Remove Existing Service
-# Clean up any previous deployment to avoid conflicts
-- name: Remove service
+# Task 3: Remove Existing Services
+# Clean up any previous deployments to avoid conflicts
+- name: Remove backup service
   docker_swarm_service:
-    name: rclone_rclone       # The name of the service in format: stack_service
+    name: nfs_backup_restic_backup       # The backup service name in format: stack_service
     state: absent             # Remove the service if it exists
   ignore_errors: true         # Continue even if the service doesn't exist or removal fails
-  # This prevents conflicts with existing services and ensures a clean deployment
-  # ignore_errors is used because the service might not exist on first deployment
+  # This removes the main backup service if it exists
+
+- name: Remove prune service
+  docker_swarm_service:
+    name: nfs_backup_restic_prune        # The prune service name in format: stack_service
+    state: absent             # Remove the service if it exists
+  ignore_errors: true         # Continue even if the service doesn't exist or removal fails
+  # This removes the prune service if it exists
+
+- name: Remove check service
+  docker_swarm_service:
+    name: nfs_backup_restic_check        # The check service name in format: stack_service
+    state: absent             # Remove the service if it exists
+  ignore_errors: true         # Continue even if the service doesn't exist or removal fails
+  # This removes the check service if it exists
 
 # Task 4: Prepare Local Directory
 # Create the directory for storing Docker Compose configuration
-- name: Setup rclone directory
+- name: Setup restic directory
   ansible.builtin.file:
-    path: /home/docker-compose/rclone  # Local path for Docker Compose files
+    path: /home/docker-compose/restic  # Local path for Docker Compose files
     state: directory                   # Ensure it's a directory
     mode: '0755'                       # Set appropriate permissions
     owner: nobody                      # Set ownership to non-privileged user
@@ -50,24 +63,24 @@
 - name: Copy compose from template to host
   ansible.builtin.template:
     src: "templates/docker-compose.yaml"             # Source template with variable placeholders
-    dest: "/home/docker-compose/rclone/docker-compose.yaml"  # Destination with variables resolved
+    dest: "/home/docker-compose/restic/docker-compose.yaml"  # Destination with variables resolved
     mode: '0755'                                     # Set appropriate permissions
     owner: nobody                                    # Set ownership to non-privileged user
     group: nogroup                                   # Set group to non-privileged group
   # This processes the Jinja2 template and substitutes any variables
   # The resulting file is a ready-to-deploy Docker Compose file
 
-# Task 6: Deploy the rClone Stack
+# Task 6: Deploy the restic Stack
 # Launch the service on Docker Swarm using the prepared configuration
-- name: Deploy rclone stack
+- name: Deploy restic stack
   ansible.builtin.command:
-    cmd: docker stack deploy -c /home/docker-compose/rclone/docker-compose.yaml rclone
+    cmd: docker stack deploy -c /home/docker-compose/restic/docker-compose.yaml nfs_backup_restic
     # Command breakdown:
     # - docker stack deploy: Swarm command to deploy a stack
     # - -c /home/..: Specifies the compose file path
-    # - rclone: The name of the stack (services will be prefixed with this)
-  # This deploys the rClone service to the Swarm cluster
-  # The service will be named 'rclone_rclone' (stack_service)
+    # - restic: The name of the stack (services will be prefixed with this)
+  # This deploys the restic service to the Swarm cluster
+  # The service will be named 'restic_restic' (stack_service)
 
 # Task 7: Cleanup Temporary Files
 # Remove the temporary deployment files after successful deployment
@@ -75,6 +88,6 @@
   ansible.builtin.command:
     cmd: rm -rf /home/docker-compose   # Remove the temporary directory and all contents
   # This cleans up after deployment to avoid leaving unnecessary files
-  # The actual rClone configuration persists in the NFS mount
-  # Warning: This removes ALL docker-compose directories, not just rClone
-  # Consider changing to target only /home/docker-compose/rclone for safer cleanup
+  # The actual restic configuration persists in the NFS mount
+  # Warning: This removes ALL docker-compose directories, not just restic
+  # Consider changing to target only /home/docker-compose/restic for safer cleanup
