--- a/deployments/nfs_backup/templates/docker-compose.yaml
+++ b/deployments/nfs_backup/templates/docker-compose.yaml
@@ -86,11 +86,13 @@ services:
       
       # Retention policy configuration: 
       RESTIC_FORGET_ARGS: >- 
-        --keep-last 4           # Keep 4 most recent backups regardless of age
-        --keep-daily 31         # Keep one backup per day for the last 31 days
-        --keep-monthly 12       # Keep one backup per month for the last 12 months
-        --keep-yearly 1         # Keep one backup per year for long-term retention
-      
+        --keep-last 4           
+        --keep-daily 7         
+        --keep-weekly 4
+        --keep-monthly 6
+        --verbose
+        --group-by host
+
       # Run 15 minutes after backup (allowing backup to complete first)
       PRUNE_CRON: "15 0/6 * * *"
       
