take restore location out of backups #10

--- a/deployments/nfs_backup/templates/docker-compose.yaml
+++ b/deployments/nfs_backup/templates/docker-compose.yaml
@@ -50,8 +50,8 @@ services:
     
     # Mount host directories into the container
     volumes:
-      - /backups:/restic                         # Where to store backup repository
-      - /backups/tmp-for-restore:/tmp-for-restore # Location for restoring files if needed
+      - /backups:/restic                          # Where to store backup repository
+      - /restore:/restore                         # Location for restoring files if needed
       - /exports/docker:/exports/docker:ro        # Source data to backup (read-only)
     
     # Security hardening
