--- a/deployments/nfs_backup/templates/docker-compose.yaml
+++ b/deployments/nfs_backup/templates/docker-compose.yaml
@@ -18,18 +18,23 @@ services:
     hostname: nfs-backup         # Hostname inside the container
     environment:
       # Run a backup when the container starts for immediate protection
-      RUN_ON_STARTUP: "true"
+      RUN_ON_STARTUP: "false"
+      SKIP_INIT: "false"  # Initialize the repository on first run
       
       # Schedule for regular backups: 45 minutes past every 2nd hour (01:45, 03:45, 05:45, ...)
       # Cron format: minute hour day month day-of-week
-      BACKUP_CRON: "45 1/2 * * *" 
+      BACKUP_CRON: "0 0/1 * * *" 
       
       # Location of the backup repository inside the container
-      RESTIC_REPOSITORY: /restic
+            # Same repository and credentials as backup service
+      RESTIC_REPOSITORY: "{{ nfs_s3_bucket }}"
+      AWS_DEFAULT_REGION: "{{ nfs_s3_region }}"
+      AWS_ACCESS_KEY_ID: "{{ nfs_s3_key_id }}"
+      AWS_SECRET_ACCESS_KEY: "{{ nfs_s3_access_key }}"
       
       # Password for encrypting/decrypting the backup repository
       # Retrieved from Ansible Vault via variable substitution
-      RESTIC_PASSWORD: "{{ file_encryption_key }}"
+      RESTIC_PASSWORD: "{{ nfs_encryption_key }}"
       
       # Source directory to backup (the NFS share)
       RESTIC_BACKUP_SOURCES: /exports/docker
@@ -50,7 +55,6 @@ services:
     
     # Mount host directories into the container
     volumes:
-      - /backups:/restic                          # Where to store backup repository
       - /restore:/restore                         # Location for restoring files if needed
       - /exports/docker:/exports/docker:ro        # Source data to backup (read-only)
     
@@ -86,37 +90,33 @@ services:
       
       # Retention policy configuration: 
       RESTIC_FORGET_ARGS: >- 
-        --keep-last 12           
+        --keep-last 24           
         --keep-daily 7         
         --keep-weekly 4
-        --keep-monthly 6
+        --keep-monthly 4
         --verbose
         --group-by host
 
       # Run 15 minutes after backup (allowing backup to complete first)
-      PRUNE_CRON: "15 0/2 * * *"
+      PRUNE_CRON: "0 3 * * *"
       
       # Same repository and credentials as backup service
-      RESTIC_REPOSITORY: /restic
-      RESTIC_PASSWORD: "{{ file_encryption_key }}"
+      RESTIC_REPOSITORY: "{{ nfs_s3_bucket }}"
+      RESTIC_PASSWORD: "{{ nfs_encryption_key }}"
       RESTIC_COMPRESSION: max   # Use same compression settings
       TZ: Europe/London         # Consistent timezone setting
+      AWS_DEFAULT_REGION: "{{ nfs_s3_region }}"
+      AWS_ACCESS_KEY_ID: "{{ nfs_s3_key_id }}"
+      AWS_SECRET_ACCESS_KEY: "{{ nfs_s3_access_key }}"
     
     # Security hardening
     security_opt:
       - no-new-privileges:true
-    
-    # Mount host directories into the container
-    volumes:
-      - /backups:/restic                         # Where to store backup repository
-    
+        
     # Docker Swarm deployment configuration
     deploy:
       mode: replicated                           # Run as a replicated service
       replicas: 1                                # Only one instance needed
-      placement:
-        constraints:
-          - node.labels.storage == true          # Run on nodes with storage label
       labels:
         traefik.enable: 'false'
         # Disables Traefik integration for this service. Set to `true` if Traefik should manage routing for this service.
@@ -136,33 +136,28 @@ services:
       # Don't run checks on container start, follow schedule only
       RUN_ON_STARTUP: "false"
       
-      # Schedule for regular integrity checks: 15 minutes past every 6th hour (01:15, 07:15, 13:15, 19:15)
-      # Cron format: minute hour day month day-of-week
-      CHECK_CRON: "15 1/2 * * *"
+      # Schedule for repository checks:
+      CHECK_CRON: "0 8 * * 1,3,5"  # Check every Monday, Wednesday, and Friday at 08:00
       
       # Arguments for the check command
       RESTIC_CHECK_ARGS: --read-data-subset=10%  # Verify 10% of data for faster checks
       
       # Same repository and credentials as backup service
-      RESTIC_REPOSITORY: /restic
-      RESTIC_PASSWORD: "{{ file_encryption_key }}"
+      RESTIC_REPOSITORY: "{{ nfs_s3_bucket }}"
+      AWS_DEFAULT_REGION: "{{ nfs_s3_region }}"
+      AWS_ACCESS_KEY_ID: "{{ nfs_s3_key_id }}"
+      AWS_SECRET_ACCESS_KEY: "{{ nfs_s3_access_key }}"
+      RESTIC_PASSWORD: "{{ nfs_encryption_key }}"
       TZ: Europe/London         # Consistent timezone setting
     
     # Security hardening
     security_opt:
       - no-new-privileges:true
-    
-    # Mount host directories into the container
-    volumes:
-      - /backups:/restic                         # Where to store backup repository
-    
+      
     # Docker Swarm deployment configuration
     deploy:
       mode: replicated                           # Run as a replicated service
       replicas: 1                                # Only one instance needed
-      placement:
-        constraints:
-          - node.labels.storage == true          # Run on nodes with storage label
       labels:
         traefik.enable: 'false'
         # Disables Traefik integration for this service. Set to `true` if Traefik should manage routing for this service.
